# applyr

./: .gitignore  CHANGELOG.md  CHECK_DEPLOY.md  DEPLOY.md  QUICK_START.md  README.md  compose.local.yml  compose.yml  docker-compose.local.yml  docker-compose.yml  env.example  features.txt
api/: Dockerfile  alembic.ini  config.py  database.py  main.py  models.py  pyproject.toml  pytest.ini  requirements.txt  run_tests.sh  schemas.py
api/alembic/: env.py
api/alembic/versions/: 2025_07_19_1312-ee915828f648_init_database.py  2025_07_19_1700-d1994af4cb93_add_auth_tables.py  2025_07_19_2222-82ccf024c34c_update_schema_for_new_models.py  2025_07_20_0056-5b3538f6be69_rename_apply_id_to_vacancy_id_and_state_.py  2025_08_03_1204-1c4f38febb16_added_enum_stage_types.py  2025_08_03_1619-6e3172213a46_fixed_stage_type.py  2025_08_03_2033-1321c553570f_updateded_stage_model.py
api/app/: config.py  database.py  main.py
api/app/alembic/: env.py  script.py.mako
api/app/alembic/versions/: 2025_07_19_1312-ee915828f648_init_database.py  (+15 more)
api/app/core/: dependencies.py  exception_handlers.py  security.py
api/app/exceptions/: base_exceptions.py  stage_exceptions.py  vacancy_exceptions.py
api/app/models/: __init__.py  auth.py  company.py  favorite.py  stage.py  vacancy.py
api/app/repositories/: auth_repository.py  favorite_repository.py  stage_repository.py  vacancy_repository.py
api/app/routers/: all.py
api/app/schemas/: admin.py  auth.py  favorite.py  stage.py  vacancy.py
api/app/services/: admin_service.py  auth_service.py  favorite_service.py  stage_service.py  vacancy_service.py
api/core/: dependencies.py  exceptions.py  security.py
api/exceptions/: __init__.py  auth_exceptions.py
api/models/: __init__.py  apply.py  apply_state.py  auth.py  company.py  refresh_token.py  stage.py  state.py  user.py  vacancy.py
api/repositories/: apply_repository.py  auth_repository.py  stage_repository.py  user_repository.py  vacancy_repository.py
api/routers/: admin.py  all.py  applies.py  auth.py  dashboard.py  stage.py  states.py  templates.py  users.py  vacancy.py
api/routers/admin/: admin.py
api/routers/internal/: bot.py
api/routers/public/: auth.py  stage.py  vacancy.py
api/schemas/: __init__.py  admin.py  apply.py  apply_state.py  auth.py  stage.py  state.py  user.py  vacancy.py
api/services/: admin_service.py  apply_service.py  auth_service.py  stage_service.py  user_service.py  vacancy_service.py
api/static/: README.md  script.js  style.css
api/static/css/: style.css
api/static/js/: app.js
api/static/templates/: main.html
api/tests/: README.md  conftest.py
api/tests/common/: api_client.py  utils.py
api/tests/factories/: base_factories.py
api/tests/functional/: test_admin.py  test_applies.py  test_auth.py  test_stage.py  test_vacancy.py
bot/: Dockerfile  config.py  main.py  pyproject.toml  requirements.txt
bot/app/: config.py  main.py
bot/app/handlers/: applies.py  vacancy_handler.py
bot/app/services/: api_client.py
bot/handlers/: applies.py  commands.py  vacancy_handler.py
bot/services/: api_client.py
bot/utils/: text_processor.py
(+47 files in other folders)
