[tool.poetry]
name = "applyr_api"
version = "0.0.1"
description = "Сервис отслеживания вакансий"
authors = ["vladsergeichev@gmail.com"]
readme = "README.md"
package-mode = false

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "0.104.1"
uvicorn = {extras = ["standard"], version = "0.24.0"}
sqlalchemy = "2.0.23"
asyncpg = "0.29.0"
psycopg2-binary = "2.9.9"
alembic = "1.16.4"
pydantic = "2.7.1"
pydantic-settings = "2.7.1"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
httpx = "^0.28.1"

[tool.poetry.group.test.dependencies]
pytest = "^8.4.2"
pytest-asyncio = "^0.23.5"
asgi-lifespan = "^2.1.0"
faker = "^37.6.0"

[tool.poetry.group.dev.dependencies]
ruff = "0.1.0"

[tool.alembic]
script_location = "%(here)s/app/alembic"
file_template = "%%(year)d_%%(month).2d_%%(day).2d_%%(hour).2d%%(minute).2d-%%(rev)s_%%(slug)s"
prepend_sys_path = [
    "."
]