[tool.poetry]
name = "applyr_api"
version = "0.0.1"
description = "Сервис отслеживания вакансий"
authors = ["vladsergeichev@gmail.com"]
readme = "README.md"
package-mode = false

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.12"
aiogram = "3.2.0"
aiohttp = "3.9.1"
pydantic-settings = "2.1.0"

[tool.poetry.group.dev.dependencies]
ruff = "0.1.0"

